run gulp task to re-generate frontend json and pot translation files

--- a/portal/translations/js/src/frontend.json
+++ b/portal/translations/js/src/frontend.json
@@ -1,11 +1,30 @@
 {
 	"agree_to_text": "Agreed to {{agreement_type}}",
+	"Server error occurred updating data.": "",
+	"Invalid user id: %d": "",
+	" Account created.  Redirecting to profile...": "",
+	"[Processing error] ": "",
+	"Email is already in use.": "",
+	"An organization must be selected.": "",
+	"no data returned": "",
+	"Error occurred retrieving clinics data.": "",
+	"No clinics data available.": "",
 	"Select All": "",
 	"Clear All": "",
 	"Close": "",
 	"Error occurred retrieving data from server.": "",
 	"Please choose at least one instrument.": "",
 	"Please choose one download type.": "",
+	"Type": "",
+	"Report Name": "",
+	"Generated (GMT)": "",
+	"Downloaded": "",
+	"Download": "",
+	"View All": "",
+	"Patient Reports": "",
+	"Patient Report": "",
+	"No report data found.": "",
+	"Error occurred retrieving patient report": "",
 	"Error retrieving demographics information for user.": "",
 	"Error occurred updating user organization.": "",
 	"Error updating organization": "",
@@ -18,7 +37,12 @@
 	"Agreement": "",
 	"Date": "",
 	"Regiatration Date": "",
+	"Consent Date": "",
 	"GMT": "",
+	"Last Updated": "",
+	"( GMT, Y-M-D )": "",
+	"Action": "",
+	"User": "",
 	"Consented": "",
 	"Consented / Enrolled": "",
 	"Withdrawn - Suspend Data Collection and Report Historic Data": "",
@@ -26,7 +50,6 @@
 	"Sharing information with clinics ": "",
 	"View": "",
 	"expired": "",
-	"modified on": "",
 	"Consent Status Editor": "",
 	"Modify the consent status for this user to": "",
 	"Consent Date Editor": "",
@@ -34,7 +57,6 @@
 	"(GMT 24-hour format)": "",
 	"for this agreement to:": "",
 	"Submit": "",
-	"Agreed to ": "",
 	"Agreed to terms": "",
 	"TrueNTH USA Terms of Use": "",
 	"Date must in the valid format.": "",
@@ -58,15 +80,16 @@
 	"Delete": "",
 	"this patient": "",
 	"staff member": "",
-	"data entered by ": "",
-	" on ": "",
-	"Added": "",
+	"(date entered by %actor on %date)": "",
+	"Added!": "",
+	"Date (GMT), Y-M-D": "",
+	"Subject": "",
+	"Email": "",
+	"No audit entry found.": "",
 	"Consent to share information": "",
 	"I consent to sharing information with": "",
 	"Cannot ununcheck.  A staff member must be associated with an organization": "",
-	"Not provided": "",
 	"unable to get needed core data": "",
-	"no data returned": "",
 	"unable to get required core data": "",
 	"No information available": "",
 	"no data found": "",
@@ -103,7 +126,11 @@
 	"Error occurred retrieving assessment list.": "",
 	"Error occurred retrieving assessment report.": "",
 	"Error occurred retrieving patient report.": "",
+	"Error occurred setting table preference.": "",
+	"Error occurred retrieving email audit entries.": "",
 	"Error occurred retrieving audit log.": "",
+	"configuration key is required.": "",
+	"Error occurred retrieving content for configuration key.": "",
 	"not provided": "",
 	"All fields must be complete.": "",
 	"Please enter a valid date.": "",
@@ -117,5 +144,6 @@
 	"Date must not be in the future. Please try again.": "",
 	"Date must not be before 1900. Please try again.": "",
 	"Date/time zone conversion is not supported in current browser. All date/time fields are converted to local time zone instead.": "",
-	"Error occurred when converting timezone: ": ""
+	"Error occurred when converting timezone: ": "",
+	"REMOVE": ""
 }
