--- a/portal/translations/js/src/frontend.json
+++ b/portal/translations/js/src/frontend.json
@@ -25,12 +25,19 @@
 	"Patient Report": "",
 	"No report data found.": "",
 	"Error occurred retrieving patient report": "",
+	"Are you sure you want to deactivate this user?": "",
+	"Inactive": "",
 	"Error retrieving demographics information for user.": "",
 	"Error occurred updating user organization.": "",
 	"Error updating organization": "",
 	"Decision Support": "",
 	"Symptom Tracker": "",
 	"Edit in Liferay": "",
+	"terms": "",
+	"You must agree to the terms and conditions by checking the provided checkboxes.": "",
+	"your information": "",
+	"your clinical profile": "",
+	"your clinic": "",
 	"Organization": "",
 	"Consent Status": "",
 	"Status": "",
@@ -72,6 +79,7 @@
 	"Patient is deceased": "",
 	"No consent found for this user.": "",
 	"You do not have permission to edit this patient record.": "",
+	"Select": "",
 	"You haven't entered any management option yet.": "",
 	"you": "",
 	"Are you sure you want to delete this treatment?": "",
@@ -86,8 +94,16 @@
 	"Subject": "",
 	"Email": "",
 	"No audit entry found.": "",
+	"Click to view report": "",
+	"No questionnaire data found.": "",
+	"Problem retrieving session data from server.": "",
+	"Last Updated - {date}": "",
+	"GMT, Y-M-D": "",
+	"Question": "",
+	"Response": "",
+	"Server Error occurred retrieving report data": "",
+	"No organizations available": "",
 	"Consent to share information": "",
-	"I consent to sharing information with": "",
 	"Cannot ununcheck.  A staff member must be associated with an organization": "",
 	"unable to get needed core data": "",
 	"unable to get required core data": "",
@@ -97,11 +113,14 @@
 	"Unable to retrieve portal footer html": "",
 	"No data found": "",
 	"Server error occurred retrieving organization/clinic information.": "",
-	"Problem retrieving data from server.": "",
 	"Server error occurred retrieving consent information.": "",
+	"Problem retrieving data from server.": "",
 	"Server error occurred setting consent status.": "",
 	"Unable to set default consent agreement": "",
 	"Server error occurred removing consent.": "",
+	"User id is required.": "",
+	"Organization id is required.": "",
+	"Error occurred setting consent status.": "",
 	"Server error occurred retrieving demographics information.": "",
 	"Server error occurred setting demographics information.": "",
 	"Server error occurred retrieving locale information.": "",
@@ -123,14 +142,19 @@
 	"Error occurred retrieving access url.": "",
 	"Error occurred sending password reset request.": "",
 	"Error occurred retrieving assessment status.": "",
+	"Response data to be update is required.": "",
 	"Error occurred retrieving assessment list.": "",
 	"Error occurred retrieving assessment report.": "",
+	"Error occurred retrieving current questionnaire bank for user.": "",
 	"Error occurred retrieving patient report.": "",
 	"Error occurred setting table preference.": "",
 	"Error occurred retrieving email audit entries.": "",
 	"Error occurred retrieving audit log.": "",
 	"configuration key is required.": "",
 	"Error occurred retrieving content for configuration key.": "",
+	"User id is required": "",
+	"Error occurred deleting user.": "",
+	"Error occurred retrieving treatment options.": "",
 	"not provided": "",
 	"All fields must be complete.": "",
 	"Please enter a valid date.": "",
@@ -145,5 +169,17 @@
 	"Date must not be before 1900. Please try again.": "",
 	"Date/time zone conversion is not supported in current browser. All date/time fields are converted to local time zone instead.": "",
 	"Error occurred when converting timezone: ": "",
-	"REMOVE": ""
+	"Year must be after 1900": "",
+	"The date must not be in the future.": "",
+	"Invalid Date. Please enter a valid date.": "",
+	"Missing value.": "",
+	"REMOVE": "",
+	"The procedure date must be valid and in required format.": "",
+	"The procedure date must be in the past.": "",
+	"Completion date cannot be before consent date.": "",
+	"Completion date cannot be in the future.": "",
+	"Completion date must be valid.": "",
+	"Invalid completion date. Date of completion is outside the days allowed.": "",
+	"Your session will expire in approximately {time} seconds due to inactivity.": "",
+	"Thank you, your access code {shortcut_alias} indicates you are located at the {org_name}. Proceeding to registration ...": ""
 }
