--- a/portal/translations/js/src/frontend.json
+++ b/portal/translations/js/src/frontend.json
@@ -1,185 +1,182 @@
 {
-	"agree_to_text": "Agreed to {{agreement_type}}",
-	"Server error occurred updating data.": "",
-	"Invalid user id: %d": "",
-	" Account created.  Redirecting to profile...": "",
-	"[Processing error] ": "",
-	"Email is already in use.": "",
-	"An organization must be selected.": "",
-	"no data returned": "",
-	"Error occurred retrieving clinics data.": "",
-	"No clinics data available.": "",
-	"Select All": "",
-	"Clear All": "",
-	"Close": "",
-	"Error occurred retrieving data from server.": "",
-	"Please choose at least one instrument.": "",
-	"Please choose one download type.": "",
-	"Type": "",
-	"Report Name": "",
-	"Generated (GMT)": "",
-	"Downloaded": "",
-	"Download": "",
-	"View All": "",
-	"Patient Reports": "",
-	"Patient Report": "",
-	"No report data found.": "",
-	"Error occurred retrieving patient report": "",
-	"Are you sure you want to deactivate this user?": "",
-	"Inactive": "",
-	"Error retrieving demographics information for user.": "",
-	"Error occurred updating user organization.": "",
-	"Error updating organization": "",
-	"Decision Support": "",
-	"Symptom Tracker": "",
-	"Edit in Liferay": "",
-	"terms": "",
-	"You must agree to the terms and conditions by checking the provided checkboxes.": "",
-	"your information": "",
-	"your clinical profile": "",
-	"your clinic": "",
-	"Organization": "",
-	"Consent Status": "",
-	"Status": "",
-	"Agreement": "",
-	"Date": "",
-	"Regiatration Date": "",
-	"Consent Date": "",
-	"GMT": "",
-	"Last Updated": "",
-	"( GMT, Y-M-D )": "",
-	"Action": "",
-	"User": "",
-	"Consented": "",
-	"Consented / Enrolled": "",
-	"Withdrawn - Suspend Data Collection and Report Historic Data": "",
-	"Suspend Data Collection and Report Historic Data": "",
-	"Sharing information with clinics ": "",
-	"View": "",
-	"expired": "",
-	"Consent Status Editor": "",
-	"Modify the consent status for this user to": "",
-	"Consent Date Editor": "",
-	"Modify the consent date": "",
-	"(GMT 24-hour format)": "",
-	"for this agreement to:": "",
-	"Submit": "",
-	"Agreed to terms": "",
-	"TrueNTH USA Terms of Use": "",
-	"Date must in the valid format.": "",
-	"Hour must be in valid format, range 0 to 23.": "",
-	"Minute must be in valid format, range 0 to 59.": "",
-	"Second must be in valid format, range 0 to 59.": "",
-	"Error processing data.  Make sure the date is in the correct format.": "",
-	"You must enter a valid date/time": "",
-	"No Consent Record Found": "",
-	"History": "",
-	"No affiliated clinic": "",
-	"No clinic selected": "",
-	"Patient is deceased": "",
-	"No consent found for this user.": "",
-	"You do not have permission to edit this patient record.": "",
-	"Select": "",
-	"You haven't entered any management option yet.": "",
-	"you": "",
-	"Are you sure you want to delete this treatment?": "",
-	"Yes": "",
-	"No": "",
-	"Delete": "",
-	"this patient": "",
-	"staff member": "",
-	"(date entered by %actor on %date)": "",
-	"Added!": "",
-	"Date (GMT), Y-M-D": "",
-	"Subject": "",
-	"Email": "",
-	"No audit entry found.": "",
-	"Click to view report": "",
-	"No questionnaire data found.": "",
-	"Problem retrieving session data from server.": "",
-	"Last Updated - {date}": "",
-	"GMT, Y-M-D": "",
-	"Question": "",
-	"Response": "",
-	"Server Error occurred retrieving report data": "",
-	"No organizations available": "",
-	"Consent to share information": "",
-	"Cannot ununcheck.  A staff member must be associated with an organization": "",
-	"unable to get needed core data": "",
-	"unable to get required core data": "",
-	"No information available": "",
-	"no data found": "",
-	"User Id is required": "",
-	"Unable to retrieve portal footer html": "",
-	"No data found": "",
-	"Server error occurred retrieving organization/clinic information.": "",
-	"Server error occurred retrieving consent information.": "",
-	"Problem retrieving data from server.": "",
-	"Server error occurred setting consent status.": "",
-	"Unable to set default consent agreement": "",
-	"Server error occurred removing consent.": "",
-	"User id is required.": "",
-	"Organization id is required.": "",
-	"Error occurred setting consent status.": "",
-	"Server error occurred retrieving demographics information.": "",
-	"Server error occurred setting demographics information.": "",
-	"Server error occurred retrieving locale information.": "",
-	"Error retrieving data from server": "",
-	"Server error occurred saving procedure/treatment information.": "",
-	"Server error occurred removing procedure/treatment information.": "",
-	"Server error occurred retrieving roles information.": "",
-	"Server error occurred retrieving user role information.": "",
-	"Server error occurred setting user role information.": "",
-	"Server error occurred deleting user role.": "",
-	"Server error occurred retrieving clinical data.": "",
-	"Server error occurred updating clinical data.": "",
-	"no url returned": "",
-	"Server error occurred retrieving tou url.": "",
-	"Server error": "",
-	"error retrieving instruments list": "",
-	"Server error occurred retrieving tou data.": "",
-	"Server error occurred saving terms of use information.": "",
-	"Error occurred retrieving access url.": "",
-	"Error occurred sending password reset request.": "",
-	"Error occurred retrieving assessment status.": "",
-	"Response data to be update is required.": "",
-	"Error occurred retrieving assessment list.": "",
-	"Error occurred retrieving assessment report.": "",
-	"Error occurred retrieving current questionnaire bank for user.": "",
-	"Error occurred retrieving patient report.": "",
-	"Error occurred setting table preference.": "",
-	"Error occurred retrieving email audit entries.": "",
-	"Error occurred retrieving audit log.": "",
-	"configuration key is required.": "",
-	"Error occurred retrieving content for configuration key.": "",
-	"User id is required": "",
-	"Error occurred deleting user.": "",
-	"Error occurred retrieving treatment options.": "",
-	"not provided": "",
-	"All fields must be complete.": "",
-	"Please enter a valid date.": "",
-	"Please enter a valid month.": "",
-	"Please enter a valid year.": "",
-	"This e-mail address is already in use. Please enter a different address.": "",
-	"Please remove invalid characters and try again.": "",
-	"Sorry, this isn't a valid date. Please try again.": "",
-	"This isn't a valid e-mail address, please double-check.": "",
-	"Invalid date. Please try again.": "",
-	"Date must not be in the future. Please try again.": "",
-	"Date must not be before 1900. Please try again.": "",
-	"Date/time zone conversion is not supported in current browser. All date/time fields are converted to local time zone instead.": "",
-	"Error occurred when converting timezone: ": "",
-	"Year must be after 1900": "",
-	"The date must not be in the future.": "",
-	"Invalid Date. Please enter a valid date.": "",
-	"Missing value.": "",
-	"REMOVE": "",
-	"The procedure date must be valid and in required format.": "",
-	"The procedure date must be in the past.": "",
-	"Completion date cannot be before consent date.": "",
-	"Completion date cannot be in the future.": "",
-	"Completion date must be valid.": "",
-	"Invalid completion date. Date of completion is outside the days allowed.": "",
-	"Your session will expire in approximately {time} seconds due to inactivity.": "",
-	"Thank you, your access code {shortcut_alias} indicates you are located at the {org_name}. Proceeding to registration ...": ""
+  "Server error occurred updating data.": "",
+  "Invalid user id: %d": "",
+  " Account created.  Redirecting to profile...": "",
+  "[Processing error] ": "",
+  "Email is already in use.": "",
+  "An organization must be selected.": "",
+  "no data returned": "",
+  "Error occurred retrieving clinics data.": "",
+  "No clinics data available.": "",
+  "Select All": "",
+  "Clear All": "",
+  "Close": "",
+  "Error occurred retrieving data from server.": "",
+  "Please choose at least one instrument.": "",
+  "Please choose one download type.": "",
+  "Type": "",
+  "Report Name": "",
+  "Generated (GMT)": "",
+  "Downloaded": "",
+  "Download": "",
+  "View All": "",
+  "Patient Reports": "",
+  "Patient Report": "",
+  "No report data found.": "",
+  "Error occurred retrieving patient report": "",
+  "Are you sure you want to deactivate this user?": "",
+  "Inactive": "",
+  "Error retrieving demographics information for user.": "",
+  "Error occurred updating user organization.": "",
+  "Error updating organization": "",
+  "Decision Support": "",
+  "Symptom Tracker": "",
+  "Edit in Liferay": "",
+  "terms": "",
+  "You must agree to the terms and conditions by checking the provided checkboxes.": "",
+  "your information": "",
+  "your clinical profile": "",
+  "your clinic": "",
+  "Organization": "",
+  "Consent Status": "",
+  "Status": "",
+  "Agreement": "",
+  "Date": "",
+  "Regiatration Date": "",
+  "Consent Date": "",
+  "GMT": "",
+  "Last Updated": "",
+  "( GMT, Y-M-D )": "",
+  "Action": "",
+  "User": "",
+  "Consented": "",
+  "Consented / Enrolled": "",
+  "Withdrawn - Suspend Data Collection and Report Historic Data": "",
+  "Suspend Data Collection and Report Historic Data": "",
+  "Sharing information with clinics ": "",
+  "View": "",
+  "expired": "",
+  "Consent Status Editor": "",
+  "Modify the consent status for this user to": "",
+  "Consent Date Editor": "",
+  "Modify the consent date": "",
+  "(GMT 24-hour format)": "",
+  "for this agreement to:": "",
+  "Submit": "",
+  "Agreed to terms": "",
+  "TrueNTH USA Terms of Use": "",
+  "Date must in the valid format.": "",
+  "Hour must be in valid format, range 0 to 23.": "",
+  "Minute must be in valid format, range 0 to 59.": "",
+  "Second must be in valid format, range 0 to 59.": "",
+  "Error processing data.  Make sure the date is in the correct format.": "",
+  "You must enter a valid date/time": "",
+  "No Consent Record Found": "",
+  "History": "",
+  "No affiliated clinic": "",
+  "No clinic selected": "",
+  "Patient is deceased": "",
+  "No consent found for this user.": "",
+  "You do not have permission to edit this patient record.": "",
+  "Select": "",
+  "You haven't entered any management option yet.": "",
+  "you": "",
+  "Are you sure you want to delete this treatment?": "",
+  "Yes": "",
+  "No": "",
+  "Delete": "",
+  "this patient": "",
+  "staff member": "",
+  "(date entered by %actor on %date)": "",
+  "Added!": "",
+  "Date (GMT), Y-M-D": "",
+  "Subject": "",
+  "Email": "",
+  "No audit entry found.": "",
+  "Click to view report": "",
+  "No questionnaire data found.": "",
+  "Problem retrieving session data from server.": "",
+  "Last Updated - {date}": "",
+  "GMT, Y-M-D": "",
+  "Question": "",
+  "Response": "",
+  "Server Error occurred retrieving report data": "",
+  "No organizations available": "",
+  "Consent to share information": "",
+  "Cannot ununcheck.  A staff member must be associated with an organization": "",
+  "unable to get needed core data": "",
+  "unable to get required core data": "",
+  "No information available": "",
+  "no data found": "",
+  "User Id is required": "",
+  "Unable to retrieve portal footer html": "",
+  "No data found": "",
+  "Server error occurred retrieving organization/clinic information.": "",
+  "Server error occurred retrieving consent information.": "",
+  "Problem retrieving data from server.": "",
+  "Server error occurred setting consent status.": "",
+  "Unable to set default consent agreement": "",
+  "Server error occurred removing consent.": "",
+  "User id is required.": "",
+  "Organization id is required.": "",
+  "Error occurred setting consent status.": "",
+  "Server error occurred retrieving demographics information.": "",
+  "Server error occurred setting demographics information.": "",
+  "Server error occurred retrieving locale information.": "",
+  "Error retrieving data from server": "",
+  "Server error occurred saving procedure/treatment information.": "",
+  "Server error occurred removing procedure/treatment information.": "",
+  "Server error occurred retrieving roles information.": "",
+  "Server error occurred retrieving user role information.": "",
+  "Server error occurred setting user role information.": "",
+  "Server error occurred deleting user role.": "",
+  "Server error occurred retrieving clinical data.": "",
+  "Server error occurred updating clinical data.": "",
+  "no url returned": "",
+  "Server error occurred retrieving tou url.": "",
+  "Server error": "",
+  "error retrieving instruments list": "",
+  "Server error occurred retrieving tou data.": "",
+  "Server error occurred saving terms of use information.": "",
+  "Error occurred retrieving access url.": "",
+  "Error occurred sending password reset request.": "",
+  "Error occurred retrieving assessment status.": "",
+  "Response data to be update is required.": "",
+  "Error occurred retrieving assessment list.": "",
+  "Error occurred retrieving assessment report.": "",
+  "Error occurred retrieving current questionnaire bank for user.": "",
+  "Error occurred retrieving patient report.": "",
+  "Error occurred setting table preference.": "",
+  "Error occurred retrieving email audit entries.": "",
+  "Error occurred retrieving audit log.": "",
+  "configuration key is required.": "",
+  "Error occurred retrieving content for configuration key.": "",
+  "User id is required": "",
+  "Error occurred deleting user.": "",
+  "Error occurred retrieving treatment options.": "",
+  "not provided": "",
+  "All fields must be complete.": "",
+  "Please enter a valid date.": "",
+  "Please enter a valid month.": "",
+  "Please enter a valid year.": "",
+  "This e-mail address is already in use. Please enter a different address.": "",
+  "Please remove invalid characters and try again.": "",
+  "Sorry, this isn't a valid date. Please try again.": "",
+  "This isn't a valid e-mail address, please double-check.": "",
+  "Invalid date. Please try again.": "",
+  "Date must not be in the future. Please try again.": "",
+  "Date must not be before 1900. Please try again.": "",
+  "Date/time zone conversion is not supported in current browser. All date/time fields are converted to local time zone instead.": "",
+  "Error occurred when converting timezone: ": "",
+  "Year must be after 1900": "",
+  "The date must not be in the future.": "",
+  "Invalid Date. Please enter a valid date.": "",
+  "Missing value.": "",
+  "REMOVE": "",
+  "The procedure date must be valid and in required format.": "",
+  "The procedure date must be in the past.": "",
+  "Completion date cannot be before consent date.": "",
+  "Completion date cannot be in the future.": "",
+  "Completion date must be valid.": "",
+  "Invalid completion date. Date of completion is outside the days allowed.": ""
 }
