Update frontend string files

--- a/portal/translations/js/src/frontend.json
+++ b/portal/translations/js/src/frontend.json
@@ -37,12 +37,13 @@
   "your information": "",
   "your clinical profile": "",
   "your clinic": "",
+  "There's a problem with your submission. Please check your answers, then try again.  Make sure all required fields are completed and valid.": "",
   "Organization": "",
   "Consent Status": "",
   "Status": "",
   "Agreement": "",
   "Date": "",
-  "Regiatration Date": "",
+  "Registration Date": "",
   "Consent Date": "",
   "GMT": "",
   "Last Updated": "",
@@ -64,7 +65,7 @@
   "for this agreement to:": "",
   "Submit": "",
   "Agreed to terms": "",
-  "TrueNTH USA Terms of Use": "",
+  "{project name} Terms of Use": "",
   "Date must in the valid format.": "",
   "Hour must be in valid format, range 0 to 23.": "",
   "Minute must be in valid format, range 0 to 59.": "",
@@ -103,7 +104,7 @@
   "Server Error occurred retrieving report data": "",
   "No organizations available": "",
   "Consent to share information": "",
-  "Cannot ununcheck.  A staff member must be associated with an organization": "",
+  "Cannot uncheck.  A staff member must be associated with an organization": "",
   "unable to get needed core data": "",
   "unable to get required core data": "",
   "No information available": "",
@@ -141,7 +142,7 @@
   "Error occurred retrieving access url.": "",
   "Error occurred sending password reset request.": "",
   "Error occurred retrieving assessment status.": "",
-  "Response data to be update is required.": "",
+  "Questionnaire response data is required.": "",
   "Error occurred retrieving assessment list.": "",
   "Error occurred retrieving assessment report.": "",
   "Error occurred retrieving current questionnaire bank for user.": "",
@@ -175,6 +176,7 @@
   "REMOVE": "",
   "The procedure date must be valid and in required format.": "",
   "The procedure date must be in the past.": "",
+  "<strong class='text-success'>{emailType} email sent to {emailAddress}</strong>": "",
   "Completion date cannot be before consent date.": "",
   "Completion date cannot be in the future.": "",
   "Completion date must be valid.": "",
